Major changes between version 0.98.3 and 0.99.
----------------------------------------------
  - Added a "sticky" option. This is like "dynamic" but the IP
    addresses determined from an actual connection will continue
    to be used for the proxy in the future in preference to the
    originally configured addresses. This may be useful if your
    provider uses dynamic addressing but only expires address
    allocations after a relatively long period of inactivity.
  - Added a "broadcast" option. This may be used in conjunction
    with the "netmask" option to manage non-pointopoint links.
    If it is not specified but "remote" is it will default to
    0.0.0.0 in an attempt to get ethertap proxies right on 2.2.x
    kernels. This may cause problems on 2.0.x. I don't know.
  - Added an ifsetup script that can be used to set up interfaces
    in *really* interesting ways. If defined it is used instead
    of ifconfig and *all* routing calls - route, defaultroute,
    addroute/delroute all have to be handled as part of ifsetup.
    At this stage ifsetup is mainly experimental. It is here so
    that configurations using it in future do not have to be
    redefined in order to fall back on a "stable" diald release.
  - Unified all the functions that invoked external programs via
    a shell into one glorious function. Now the output from
    everything is logged - including ip-up/ip-down - and all
    scripts have the same environment variables set for them.
    Since we log the output we no longer log the exit status
    of external scripts.
  - Made local and remote addresses optional. If you are using a
    named interface as proxy (or have no proxy at all) you may
    not care about the addresses.
  - Added a proxy option which may be used to specify a particular
    interface to snoop as a proxy. One possible use for this would
    be to set up an ISDN interface "by the book", leave it in
    manual dial mode, and run diald with proxy isdn0 and device isdn0