@@ -1,3 +1,11 @@
+Major changes between version 0.98.3 and 0.99.1.
+------------------------------------------------
+  - Do not ifconfig transient interfaces (ppp<n> and sl<n>) to
+    delete the address. This simply reallocates them and leaves
+    them hanging around, up but with no addresses. In this state
+    they are never reused and we leak interfaces.
+
+
 Major changes between version 0.98.3 and 0.99.
 ----------------------------------------------
   - Added a "sticky" option. This is like "dynamic" but the IP
